kubernetes_app/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        livenessProbe:
           #httpGet:
         exec:
           command:
           - ll ; grep mongo
           - ls -l /bin
              #path: /
              #port: 27017
            initialDelaySecond: 10
            periodSeconds: 10  #Describes how frequent the probe runs
            timeoutSeconds: 60 #Timeout interval for it to be considered a failed probe
            failureThreshold: 4
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
